--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
       margin: 0;
       padding: 0;
     }
-    header, nav, section, aside, footer {
+    header, nav, section, summary, aside, footer {
       padding: 20px;
       margin: 10px;
     }
@@ -38,6 +38,12 @@
       background-color: #292929;
       border-radius: 8px;
     }
+    summary {
+      display: block;
+      background-color: #3a3a3a;
+      border-left: 4px solid #00bcd4;
+      font-size: 1.1em;
+    }
     aside {
       background-color: #444;
       font-style: italic;
@@ -62,12 +68,9 @@
     <a id="nav-quote" href="#quote">Quotes</a>
   </nav>
 
-  <section>
-    <h2>Summary</h2>
-    <p>
-      Inception is a science fiction thriller directed by Christopher Nolan. The story follows Dom Cobb, a professional thief who specializes in infiltrating the subconscious of his targets. He is offered a chance to have his criminal history erased in exchange for planting an idea into a target’s mind—a process known as inception. As the team delves deeper into layered dreams, the line between reality and imagination begins to blur.
-    </p>
-  </section>
+  <summary>
+    Inception is a science fiction thriller directed by Christopher Nolan. The story follows Dom Cobb, a professional thief who specializes in infiltrating the subconscious of his targets. He is offered a chance to have his criminal history erased in exchange for planting an idea into a target’s mind—a process known as inception. As the team delves deeper into layered dreams, the line between reality and imagination begins to blur.
+  </summary>
 
   <section id="actor">
     <h2>Actors</h2>
